// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component Hero component with keyline renders level 0 with keyline 1`] = `
<div>
  <div
    class="Hero Hero--slim Hero--carousel Hero--keyline"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="wrapper"
          >
            <div
              class="Carousel Carousel--opacity Carousel--swipable"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="page"
                    >
                      <div
                        class="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="content"
                        >
                          <h1
                            class="MuiTypography-root title title--truncated Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
                          >
                            Title
                          </h1>
                          <div
                            class="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="SlideControls SlideControls--light SlideControls--hide controls"
          >
            <span
              class="middle-container"
            >
              <span
                class="sliding-slot"
              >
                <span
                  class="numbers"
                >
                  <span
                    class="number number--active"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="total"
              >
                01
              </span>
            </span>
          </div>
          <div
            class="children"
          />
        </div>
      </div>
    </div>
    <div
      class="image-carousel"
    >
      <div
        class="wrapper"
      >
        <div
          class="Carousel Carousel--swipable"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="page"
                >
                  <div
                    class="slide"
                    style="width: 100%;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component Hero component with keyline renders level 1 with keyline  1`] = `
<div>
  <div
    class="Hero Hero--keyline Hero--light Hero--slim Hero--lvl-3"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="content"
          >
            <h1
              class="MuiTypography-root title title--truncated Typography Typography--underline MuiTypography-h1"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component Hero component with keyline renders with no underline 1`] = `
<div>
  <div
    class="Hero Hero--slim Hero--carousel Hero--keyline"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="wrapper"
          >
            <div
              class="Carousel Carousel--opacity Carousel--swipable"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="page"
                    >
                      <div
                        class="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="content"
                        >
                          <h1
                            class="MuiTypography-root title title--truncated Typography MuiTypography-h1"
                          >
                            Title
                          </h1>
                          <div
                            class="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="SlideControls SlideControls--light SlideControls--hide controls"
          >
            <span
              class="middle-container"
            >
              <span
                class="sliding-slot"
              >
                <span
                  class="numbers"
                >
                  <span
                    class="number number--active"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="total"
              >
                01
              </span>
            </span>
          </div>
          <div
            class="children"
          />
        </div>
      </div>
    </div>
    <div
      class="image-carousel"
    >
      <div
        class="wrapper"
      >
        <div
          class="Carousel Carousel--swipable"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="page"
                >
                  <div
                    class="slide"
                    style="width: 100%;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 1 1`] = `
<div>
  <div
    class="Hero Hero--lvl-1"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="content"
          >
            <h1
              class="MuiTypography-root title title--truncated Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
            >
              H1 Heading
            </h1>
            <div
              class="text"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
            </div>
          </div>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="image Media"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Hero component renders level 1 with CTA 1`] = `
<div>
  <div
    class="Hero Hero--lvl-1"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="content"
          >
            <h1
              class="MuiTypography-root title title--truncated Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
            >
              H1 Heading
            </h1>
            <div
              class="text"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined buttonStyles-outlinedDarkBg-7 cta MuiButton-outlinedPrimary"
              label="CTA action"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label buttonStyles-label-4"
              >
                CTA action
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="image Media"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Hero component renders level 2 1`] = `
<div>
  <div
    class="Hero Hero--slim Hero--lvl-2"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="content"
          >
            <h1
              class="MuiTypography-root title title--truncated Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 3 1`] = `
<div>
  <div
    class="Hero Hero--light Hero--slim Hero--lvl-3"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root container MuiContainer-maxWidthXl"
      >
        <div
          class="wrapper"
        >
          <div
            class="content"
          >
            <h1
              class="MuiTypography-root title title--truncated Typography Typography--underline MuiTypography-h1"
            >
              H1 Heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
